force-app/main/default/objects/ASF_Bulk_Upload_Line_Item__c/ASF_Bulk_Upload_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Bulk Upload Line Item</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Bulk Upload Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Upload Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>