force-app/main/default/objects/ASF_Bulk_Upload_Line_Item__c/fields/Bulk_Upload_Header__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Upload_Header__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Header</label>
    <referenceTo>ASF_Bulk_Upload_Header__c</referenceTo>
    <relationshipLabel>Bulk Upload Line Items</relationshipLabel>
    <relationshipName>Bulk_Upload_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>