force-app/main/default/objects/ASF_Bulk_Upload_Line_Item__c/fields/Event_Fired_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Fired_Date__c</fullName>
    <label>Event Fired Date</label>
    <type>DateTime</type>
</CustomField>