force-app/main/default/objects/ASF_Bulk_Upload_Line_Item__c/fields/JSON_Data__c.field-meta.xml
<CustomField>
    <fullName>JSON_Data__c</fullName>
    <label>JSON Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>