force-app/main/default/objects/ASF_Bulk_Upload_Line_Item__c/fields/Number_of_retries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_retries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of retries</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>