force-app/main/default/objects/ASF_Bulk_Upload_Line_Item__c/fields/Result_JSON_Data__c.field-meta.xml
<CustomField>
    <fullName>Result_JSON_Data__c</fullName>
    <label>Result JSON Data</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>