force-app/main/default/objects/ASF_Bulk_Upload_Line_Item__c/fields/Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Row_Number__c</fullName>
    <externalId>true</externalId>
    <label>Row Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>